do some progress

--- a/templates/users/logged_out.html
+++ b/templates/users/logged_out.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
-{% block title %}Вы вышли из системы{% endblock %}
+{% block title %}You logged out{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
   <div class="col-md-8 p-5">
     <div class="card">
       <div class="card-header">
-        Выход
+        Logg out
       </div>
       <div class="card-body">
         <p>
-          Вы вышли из своей учётной записи. Ждём вас снова!
+          You logged out. See you later!
         </p>
       </div> <!-- card body -->
     </div> <!-- card -->
