do some progress

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -9,12 +9,22 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'notifications:index' %}">Home</a>
         </li>
+        {% if user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link" href="#">Notifications</a>
+          <a class="nav-link" href="#">Add notification</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Profile</a>
         </li>
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        {% else %}
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'users:signup' %}">SignUp</a>
+        </li>
+        {% endif %}
       </ul>
     </div>
   </div>
