--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -17,6 +17,10 @@
           <a class="nav-link" href="#">Profile</a>
         </li>
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        {% elif user.is_staff %}
+        <li class="nav-item">
+          <a class="nav-link" href="#">Accounts</a>
+        </li>
         {% else %}
         <li class="nav-item">
             <a class="nav-link" href="{% url 'login' %}">Login</a>
