--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -23,7 +23,7 @@
             {% endfor %}
           {% endif %}
 
-            <form method="post" action="{% url 'users:signup' %}">
+            <form method="post" action="{% url 'users:signup' %}" enctype="multipart/form-data">
               {% csrf_token %}
               {% for field in form %}
               <div class="form-group row my-3 p-3">
