--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -21,7 +21,7 @@
         </li>
         {% if user.is_staff %}
         <li class="nav-item">
-          <a class="nav-link" href="accounts/">Accounts</a>
+          <a class="nav-link" href="{% url 'AccountAdmin:index' %}">Accounts</a>
         </li>
         {% endif %}
         <li class="nav-item">
