--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,3 +1,4 @@
+{% load socialaccount %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'notifications:index' %}">Notification service</a>
@@ -30,6 +31,9 @@
         {% else %}
         <li class="nav-item">
             <a class="nav-link" href="{% url 'login' %}">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% provider_login_url 'google' %}">Login with Google</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{% url 'users:signup' %}">SignUp</a>
