--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% block title %}Войти{% endblock %}
+{% block title %}Log In{% endblock %}
 {% block content %}
   <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
         <div class="card-header">
-          Войти на сайт
+          Log In
         </div>
         <div class="card-body">
           {% if form.errors %}
@@ -56,10 +56,10 @@
           {% endfor %}
           <div class="col-md-6 offset-md-4">
             <button type="submit" class="btn btn-primary">
-              Войти
+              Log In
             </button>
              <a href="{% url 'password_reset' %}" class="btn btn-link">
-              Забыли пароль?
+              Forgot password?
             </a>
           </div>
           </form>
